--- a/sub3suite/src/engines/osint/Osint.ui
+++ b/sub3suite/src/engines/osint/Osint.ui
@@ -241,7 +241,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QFrame" name="">
+    <widget class="QFrame" name="frame">
      <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
@@ -271,7 +271,7 @@
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>*Scan Config</string>
+         <string>*Scan Configuration</string>
         </property>
        </widget>
       </item>
@@ -537,7 +537,7 @@
            <enum>QAbstractItemView::ScrollPerPixel</enum>
           </property>
           <property name="showGrid">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="sortingEnabled">
            <bool>true</bool>
@@ -564,10 +564,10 @@
            <bool>false</bool>
           </attribute>
           <attribute name="verticalHeaderMinimumSectionSize">
-           <number>15</number>
+           <number>18</number>
           </attribute>
           <attribute name="verticalHeaderDefaultSectionSize">
-           <number>15</number>
+           <number>18</number>
           </attribute>
          </widget>
         </item>
