--- a/sub3suite/src/tools/domain/DomainTool.ui
+++ b/sub3suite/src/tools/domain/DomainTool.ui
@@ -54,6 +54,21 @@
       </widget>
      </item>
      <item>
+      <widget class="QComboBox" name="comboBox_2">
+       <property name="minimumSize">
+        <size>
+         <width>110</width>
+         <height>0</height>
+        </size>
+       </property>
+       <item>
+        <property name="text">
+         <string>All</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
       <widget class="QLineEdit" name="lineEditTarget"/>
      </item>
      <item>
@@ -112,25 +127,10 @@
        <number>2</number>
       </property>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QCheckBox" name="checkBoxMultipleTargets">
         <property name="text">
-         <string>*Data Type</string>
+         <string>Multiple Targets</string>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="comboBox_2">
-        <property name="minimumSize">
-         <size>
-          <width>110</width>
-          <height>0</height>
-         </size>
-        </property>
-        <item>
-         <property name="text">
-          <string>All</string>
-         </property>
-        </item>
        </widget>
       </item>
       <item>
@@ -247,10 +247,10 @@
            <bool>true</bool>
           </attribute>
           <attribute name="headerMinimumSectionSize">
-           <number>200</number>
+           <number>220</number>
           </attribute>
           <attribute name="headerDefaultSectionSize">
-           <number>300</number>
+           <number>220</number>
           </attribute>
           <attribute name="headerHighlightSections">
            <bool>true</bool>
