--- a/sub3suite/res/themes/default.css
+++ b/sub3suite/res/themes/default.css
@@ -469,6 +469,10 @@ QMenuBar::item {
     background: transparent;
 }
 
+QMenuBar::item:disabled {
+    color: grey;
+}
+
 QMenuBar::item:selected,
 QMenuBar::item:hover,
 QMenu::item:selected {
