--- a/sub3suite/src/Dialogs/DocumentationDialog.ui
+++ b/sub3suite/src/Dialogs/DocumentationDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>AboutEngineDialog</class>
- <widget class="QDialog" name="AboutEngineDialog">
+ <class>DocumentationDialog</class>
+ <widget class="QDialog" name="DocumentationDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
