--- a/sub3suite/res.qrc
+++ b/sub3suite/res.qrc
@@ -22,16 +22,19 @@
         <file>res/files/srv.txt</file>
         <file>res/files/userAgents.txt</file>
         <file>res/files/LICENSE</file>
-        <file>res/files/about/brute.html</file>
-        <file>res/files/about/dns.html</file>
-        <file>res/files/about/ip.html</file>
-        <file>res/files/about/osint.html</file>
-        <file>res/files/about/raw.html</file>
-        <file>res/files/about/ssl.html</file>
-        <file>res/files/about/active.html</file>
     </qresource>
     <qresource prefix="/themes">
         <file>res/themes/default.css</file>
         <file>res/themes/light.css</file>
+    </qresource>
+    <qresource prefix="/documentation">
+        <file>res/documentation/active.html</file>
+        <file>res/documentation/brute.html</file>
+        <file>res/documentation/dns.html</file>
+        <file>res/documentation/index.html</file>
+        <file>res/documentation/ip.html</file>
+        <file>res/documentation/osint.html</file>
+        <file>res/documentation/raw.html</file>
+        <file>res/documentation/ssl.html</file>
     </qresource>
 </RCC>
